Se elimina id_user del JSON y se obtiene a través del token, y también el filtro de anuncios
