# app/Http/Controllers/FoodController.php
@@ -2,13 +2,40 @@
 
 namespace App\Http\Controllers;
 
-use App\Models\Child;
 use App\Models\Food;
 use Exception;
 use Illuminate\Http\Request;
 
 class FoodController extends Controller
 {
+     /**
+     * Formato de fecha: YYYY-MM-DD
+     * 
+     * Formato de hora: HH:MM:SS
+     * 
+     * @OA\Post(
+     *     path="/api/createFood",
+     *     tags={"Comidas"},
+     *     summary="Publicación de un auncio",
+     *     @OA\RequestBody(
+     *         required=true,
+     *         @OA\JsonContent(
+     *             @OA\Property(property="name", type="string"), 
+     *             @OA\Property(property="type", type="string"), 
+     *             @OA\Property(property="date", type="string"), 
+     *             @OA\Property(property="hour", type="string")
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="Se almacena un anuncio en un grupo."
+     *     ),
+     *     @OA\Response(
+     *         response="default",
+     *         description="Ha ocurrido un error."
+     *     )
+     * )
+     */
     public function store(Request $request)
     {
         try {
